--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -130,7 +130,7 @@
 	}
 }
 
-@media (max-width: 1366px) {
+@include respond(tab-land) {
 	.intro-section {
 		&__wave {
 			transform-origin: bottom;
@@ -156,7 +156,7 @@
 	}
 }
 
-@media (max-width: 780px) {
+@include respond(tab-port) {
 	.intro-section {
 		height: auto;
 		display: flex;
@@ -192,7 +192,7 @@
 	}
 }
 
-@media (max-width: 480px) {
+@include respond(phone) {
 	.intro-section {
 		&__wave {
 			transform-origin: bottom;
