--- a/src/app/shared/components/back-top-btn/back-top-btn.component.scss
+++ b/src/app/shared/components/back-top-btn/back-top-btn.component.scss
@@ -37,11 +37,7 @@
 	display: none;
 }
 
-@media (max-width: 1024px) {
-}
-@media (max-width: 768px) {
-}
-@media (max-width: 480px) {
+@include respond(phone) {
 	.btn {
 		@include elem-size(4rem, 4rem);
 		bottom: 2rem;
