--- a/src/app/shared/components/header-curve/header-curve.component.scss
+++ b/src/app/shared/components/header-curve/header-curve.component.scss
@@ -1,3 +1,5 @@
+@import 'abstracts/mixins';
+
 .header-gap {
 	width: 100%;
 	height: 3rem;
@@ -6,13 +8,13 @@
 .wave {
 	transition: transform 0.7s;
 }
-@media (max-width: 1366px) {
+@include respond(tab-land) {
 	.wave {
 		transform-origin: top;
 		transform: scaleY(1.4);
 	}
 }
-@media (max-width: 768px) {
+@include respond(tab-port) {
 	.wave {
 		transform-origin: top;
 		transform: scaleY(1.7);
