--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -59,7 +59,7 @@
 	}
 }
 
-@media (max-width: 768px) {
+@include respond(tab-port) {
 	.menu {
 		width: 60%;
 
@@ -69,7 +69,7 @@
 	}
 }
 
-@media (max-width: 480px) {
+@include respond(phone) {
 	.header {
 		flex-direction: column;
 		justify-content: center;
