changeGrassType() function created in the server and called in Pokemon Detail Component

--- a/src/app/components/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -11,6 +11,9 @@
 				<app-pokemon-map class="panel__info__map"></app-pokemon-map>
 			</div>
 		</div>
+		<button class="panel__button-change" (click)="changeGrassType()">
+			Change grass type Pokemon images
+		</button>
 	</div>
 	<div
 		class="detail-container__no-selected"
