--- a/src/app/components/pokedex/pokemon-list/pokemon-list.component.scss
+++ b/src/app/components/pokedex/pokemon-list/pokemon-list.component.scss
@@ -6,8 +6,6 @@
 	flex-direction: column;
 	justify-content: space-between;
 	padding: 2rem;
-	// margin: 0 auto;
-	// width: 40rem;
 }
 
 .title {
@@ -47,6 +45,12 @@
 	box-shadow: $our-box-shadow;
 }
 
+.filter-box {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
 .search-bar {
 	display: flex;
 	align-items: center;
@@ -55,7 +59,6 @@
 	background-color: white;
 	border-radius: 10px;
 	margin-bottom: 1rem;
-	// width: 25em;
 
 	&__img {
 		width: 20px;
@@ -69,6 +72,27 @@
 		width: 100%;
 		margin-left: 2rem;
 		font-size: 1.5rem;
+	}
+}
+
+.dropdown-btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: sticky;
+	height: 35px;
+	width: 35px;
+	border: 1px solid rgb(207, 205, 205);
+	background-color: white;
+	border-radius: 10px;
+	margin-bottom: 10px;
+	cursor: pointer;
+
+	&__img {
+		display: flex;
+		max-width: 50%;
+		transform: rotate(180deg);
+		opacity: 0.3;
 	}
 }
 
