tag-type button works and display the selected type of pokemon on the list

--- a/src/app/components/pokedex/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokedex/pokemon-list/pokemon-list.component.html
@@ -46,7 +46,8 @@
 			<div
 				class="elem"
 				*ngFor="
-					let elem of pokemonList | searcherFilter: searchPokemonName;
+					let elem of filterPokemonsByType(selectedType)
+						| searcherFilter: searchPokemonName;
 					index as i
 				"
 				routerLink="./{{ elem.name }}"
