url added to the landing service, component card-member manages and displays the correct data of each member

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -73,6 +73,9 @@
 				[name]="person.name"
 				[job]="person.job"
 				[img]="person.img"
+				[linkedin]="person.linkedin"
+				[github]="person.github"
+				[twitter]="person.twitter"
 			></app-card-member>
 		</div>
 	</div>
