refactoring landing.service

--- a/src/app/shared/components/card-member/card-member.component.html
+++ b/src/app/shared/components/card-member/card-member.component.html
@@ -32,11 +32,7 @@
 				</a>
 			</div>
 			<div *ngIf="twitter">
-				<a
-					href="{{ twitter }}"
-					target="_blank"
-					rel="noopener noreferrer"
-				>
+				<a href="{{ q }}" target="_blank" rel="noopener noreferrer">
 					<img
 						class="card__logo"
 						src="../.././../../assets/img/logos/twitter-logo.png"
