build problem has been solved

--- a/src/app/shared/components/card-member/card-member.component.html
+++ b/src/app/shared/components/card-member/card-member.component.html
@@ -32,7 +32,11 @@
 				</a>
 			</div>
 			<div *ngIf="twitter">
-				<a href="{{ q }}" target="_blank" rel="noopener noreferrer">
+				<a
+					href="{{ twitter }}"
+					target="_blank"
+					rel="noopener noreferrer"
+				>
 					<img
 						class="card__logo"
 						src="../.././../../assets/img/logos/twitter-logo.png"
