--- a/src/app/components/pokedex/pokedex.component.scss
+++ b/src/app/components/pokedex/pokedex.component.scss
@@ -6,6 +6,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	width: 100%;
 	min-height: calc(100vh - 100px);
 	background: linear-gradient(
 			rgba(255, 255, 255, 0.801),
@@ -18,16 +19,46 @@
 .pokedex {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	flex-wrap: wrap;
+	box-sizing: border-box;
 	width: 100%;
 
 	&__pokemon-list {
-		flex-grow: 1;
+		flex: 1 0 40rem;
+		box-sizing: border-box;
+		margin: 3rem;
 	}
 
 	&__pokemon-detail {
-		flex-grow: 6;
-		align-self: center;
+		flex: 2 0 40rem;
+		box-sizing: border-box;
+		margin: 3rem;
+	}
+}
+
+.error-message {
+	background-color: $primary-color;
+	padding: 3rem;
+	border-radius: 20px;
+	&__text {
+		background-color: #494949;
+		padding: 2rem 4rem;
+		color: #fff;
+		border-radius: 20px;
+		font-size: 3rem;
+		text-transform: uppercase;
+		font-family: Roboto, sans-serif;
+		font-weight: 900;
+		text-align: center;
+	}
+	&__img {
+		background-color: #fff;
+		border-radius: 20px;
+		padding: 2rem;
+		margin-bottom: 2rem;
+		display: flex;
+		justify-content: center;
 	}
 }
 
@@ -36,6 +67,7 @@
 	display: flex;
 	align-items: center;
 
+	margin: 0 auto;
 	&__request {
 		border-radius: 100px;
 		height: 60px;
@@ -48,11 +80,35 @@
 
 @include respond(tab-port) {
 	.pokedex {
-		flex-direction: column;
+		// flex-direction: column;
 
-		&__pokemon-list,
+		// &__pokemon-list,
+		// &__pokemon-detail {
+		// 	width: 100%;
+		// }
+	}
+	.error-message {
+		width: 28rem;
+		&__text {
+			font-size: 2rem;
+		}
+		&__img {
+			img {
+				width: 30rem;
+			}
+		}
+	}
+}
+
+@include respond(phone) {
+	.pokedex {
+		&__pokemon-list {
+			margin: 2rem 1rem;
+			flex-basis: auto;
+		}
 		&__pokemon-detail {
-			width: 100%;
+			margin: 2rem 1rem;
+			flex-basis: auto;
 		}
 	}
 }
