--- a/src/app/components/pokedex/pokemon-list/pokemon-list.component.scss
+++ b/src/app/components/pokedex/pokemon-list/pokemon-list.component.scss
@@ -6,7 +6,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	padding: 2rem;
+	width: 100%;
 }
 
 .title {
@@ -184,18 +184,14 @@
 
 @include respond(phone) {
 	.component-box {
-		padding-left: 0.5rem;
-		padding-right: 0.5rem;
 	}
 	.elem {
+		height: 5.2rem;
 		&__name {
-			padding-left: 10px;
+			padding-left: 1rem;
 		}
-	}
-}
-
-@include respond(tab-land) {
-	.component-box {
-		padding: 2rem 6rem;
+		&__info__img {
+			height: 65%;
+		}
 	}
 }
