--- a/src/app/shared/components/card-functionality/card-functionality.component.scss
+++ b/src/app/shared/components/card-functionality/card-functionality.component.scss
@@ -12,6 +12,7 @@
 	background-color: #f0f0f0;
 	box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
 	padding: 4rem;
+	margin: 2rem 4rem;
 	border-radius: 15px;
 
 	&__img {
