--- a/src/app/shared/components/card-member/card-member.component.scss
+++ b/src/app/shared/components/card-member/card-member.component.scss
@@ -1,6 +1,9 @@
 @import 'abstracts/variables';
 @import 'abstracts/mixins';
 
+.member {
+	margin: 0 6rem;
+}
 .card {
 	height: 23rem;
 	width: 23rem;
@@ -66,4 +69,24 @@
 		width: 3rem;
 		margin: 1rem;
 	}
+}
+
+@include respond(tab-land) {
+	.card {
+		&__name {
+			font-size: 1.7rem;
+		}
+	}
+}
+
+@media only screen and (max-width: 48.75em), only screen and (hover: none) {
+	// .card{
+	//     &__side--back{
+	//         display: none;
+	//     }
+	//     &:hover &__side--front{
+	//         transform: rotate(0);
+	//         opacity: 1;
+	//     }
+	// }
 }
