Add relative paths in image to fix error in build

--- a/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
@@ -1,6 +1,6 @@
 <div class="card-container">
 	<div class="card-container__title">
-		<img src="/assets/img/iconPokeData.svg" alt="Icon Map" />
+		<img src="assets/img/iconPokeData.svg" alt="Pokemon Icon" />
 		<h2>
 			Pokemon
 		</h2>
