--- a/src/app/components/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -21,7 +21,7 @@
 	>
 		<div class="choose">
 			<img
-				src="../../../assets/img/pikachu-search.png"
+				src="assets/img/pikachu-search.png"
 				alt="Unselected picture"
 				class="choose__img"
 			/>
