--- a/src/app/shared/components/back-top-btn/back-top-btn.component.html
+++ b/src/app/shared/components/back-top-btn/back-top-btn.component.html
@@ -2,7 +2,7 @@
 	<div (click)="backToTop()" class="btn" *ngIf="topPosition === false">
 		<img
 			class="btn__img"
-			src="../../../../assets/img/svg/angle-up-solid.svg"
+			src="assets/img/svg/angle-up-solid.svg"
 			alt="back-top-arrow"
 		/>
 	</div>
