--- a/src/app/shared/components/characters-animation/characters-animation.component.html
+++ b/src/app/shared/components/characters-animation/characters-animation.component.html
@@ -1,4 +1,4 @@
 <div class="characters">
-	<img class="characters__professor" src="/assets/img/pokemon-prof.png" />
+	<img class="characters__professor" src="assets/img/pokemon-prof.png" />
 	<img class="characters__pokemon" [src]="imgSource" alt="" />
 </div>
