--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,9 +1,5 @@
 <header class="header">
-	<img
-		class="logo"
-		src="../../assets/img/pokemon-logo.png"
-		alt="pokemon-logo"
-	/>
+	<img class="logo" src="assets/img/pokemon-logo.png" alt="pokemon-logo" />
 
 	<app-hamburguer-icon
 		(click)="render()"
