--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,37 +1,37 @@
 <footer class="footer">
 	<img
 		class="pokeball-img"
-		src="../../assets/img/pokeball-logo.png"
+		src="assets/img/pokeball-logo.png"
 		alt="Logo Pokeball"
 	/>
 	<img
 		class="pokemon-img pokemon-img--hidden-1"
-		src="../../assets/img/pikachu-footer.png"
+		src="assets/img/pikachu-footer.png"
 		alt="Pikachu"
 	/>
 	<img
 		class="pokemon-img pokemon-img--hidden-2"
-		src="../../assets/img/blastoise-footer.png"
+		src="assets/img/blastoise-footer.png"
 		alt="Blastoise"
 	/>
 	<img
 		class="footer__title"
-		src="../../assets/img/pokedexApi-footer.png"
+		src="assets/img/pokedexApi-footer.png"
 		alt="Logo PokedexApi"
 	/>
 	<img
 		class="pokemon-img pokemon-img--hidden-2"
-		src="../../assets/img/ghost-footer.png"
+		src="assets/img/ghost-footer.png"
 		alt="Ghost"
 	/>
 	<img
 		class="pokemon-img pokemon-img--hidden-1"
-		src="../../assets/img/charizard-footer.png"
+		src="assets/img/charizard-footer.png"
 		alt="Charizard"
 	/>
 	<img
 		class="pokeball-img"
-		src="../../assets/img/pokeball-logo.png"
+		src="assets/img/pokeball-logo.png"
 		alt="Logo Pokeball"
 	/>
 </footer>
