Add functional link to "Find your Pokemon" button from button-arrow-component

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -30,6 +30,7 @@
 	<app-button-arrow
 		class="intro-section__btn-landing"
 		[text]="'Find your Pokemon'"
+		[url]="'/pokedex'"
 	></app-button-arrow>
 </main>
 
