--- a/src/app/shared/components/button-arrow/button-arrow.component.html
+++ b/src/app/shared/components/button-arrow/button-arrow.component.html
@@ -1,3 +1,5 @@
 <div class="button">
-	<a class="button__link"><span class="quote"></span>{{ text }}</a>
+	<a routerLink="{{ url }}" class="button__link"
+		><span class="quote"></span>{{ text }}</a
+	>
 </div>
