Fix several responsive behaviours in landing, card, button-arrow and characters component

--- a/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
@@ -40,8 +40,8 @@
 
 	background-image: url('/assets/img/pokeball-bg.svg');
 	background-repeat: no-repeat;
-	background-size: 150%;
-	background-position: 0 100%;
+	background-size: cover;
+	background-position: 49% 100%;
 
 	&__btn {
 		align-self: flex-end;
