--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -94,7 +94,6 @@
 .section-team {
 	position: relative;
 	display: flex;
-	height: calc(100vh - 5rem);
 	flex-flow: column nowrap;
 	justify-content: space-between;
 	//background-color: $primary-color;
@@ -113,7 +112,7 @@
 
 	&__rights {
 		width: 100%;
-		height: 3%;
+		margin: 2rem 0;
 		font-size: 1.2rem;
 		text-align: center;
 		color: white;
@@ -152,6 +151,12 @@
 			transform-origin: bottom;
 			transform: scaleY(1.4);
 		}
+	}
+}
+
+@include respond(big-desktop) {
+	.section-team {
+		height: calc(100vh - 5rem);
 	}
 }
 
