--- a/src/app/shared/components/button-arrow/button-arrow.component.scss
+++ b/src/app/shared/components/button-arrow/button-arrow.component.scss
@@ -8,6 +8,7 @@
 	text-align: center;
 	&__link {
 		cursor: pointer;
+		text-decoration: none;
 		display: inline-block;
 		padding: 3rem 7.25rem;
 		border-radius: 10px;
