Add absolute path in scss files

--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -8,7 +8,7 @@
 	box-sizing: border-box;
 	height: calc(100vh - 7rem);
 	@include background-parallax(
-		'/assets/img/pokemon-header.jpg',
+		'../../../assets/img/pokemon-header.jpg',
 		$color-white,
 		0.8
 	);
