--- a/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
@@ -38,7 +38,7 @@
 	color: white;
 	min-height: 240px;
 
-	background-image: url('/assets/img/pokeball-bg.svg');
+	background-image: url('../../../../../assets/img/pokeball-bg.svg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 49% 100%;
